# coord-country-resolver

./: .dockerignore  .env.example  .gitignore  ACKNOWLEDGEMENTS.md  CITATION.cff  Dockerfile  NOTICE  README.md  docker-compose.yml  pyproject.toml
coord_country_resolver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
country_resolver/: __init__.py  models.py  resolver.py  settings.py
scripts/: smoke_test.py  smoke_test_api.py  test_geoboundaries_gpkg.py
service/: app.py
tests/: test_resolver.py
