[project]
name = "coord-country-resolver"
version = "0.1.0"
description = "Resolve latitude/longitude coordinate pairs to country codes using Natural Earth polygons and fallbacks."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyshp>=2.3",
    "shapely>=2.0",
    "python-dotenv>=1.0",
    "reverse-geocoder>=1.5",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"